--- a/app/src/main/res/layout/activity_resta.xml
+++ b/app/src/main/res/layout/activity_resta.xml
@@ -16,21 +16,21 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <EditText
-            android:id="@+id/editTextNumber"
+            android:id="@+id/editTextNumberXR"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="number" />
 
         <EditText
-            android:id="@+id/editTextNumber2"
+            android:id="@+id/editTextNumberYR"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="number" />
 
         <EditText
-            android:id="@+id/editTextNumber3"
+            android:id="@+id/editTextNumberTotalR"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
