--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,39 +4,71 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#4A4A4A"
     tools:context=".Logica.MainActivity">
 
-    <LinearLayout
-        android:layout_width="409dp"
-        android:layout_height="729dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
-        android:orientation="vertical"
+    <Button
+        android:id="@+id/buttonSuma"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="93dp"
+        android:layout_marginTop="110dp"
+        android:backgroundTint="#23A148"
+        android:text="+"
+        android:textSize="34sp"
+        app:cornerRadius="60dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/buttonSuma"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Suma" />
+    <Button
+        android:id="@+id/buttonMulti"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginBottom="348dp"
+        android:backgroundTint="#23A148"
+        android:text="x"
+        android:textSize="34sp"
+        app:cornerRadius="60dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <Button
-            android:id="@+id/buttonResta"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Resta" />
+    <Button
+        android:id="@+id/buttonResta"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="110dp"
+        android:layout_marginEnd="97dp"
+        android:backgroundTint="#23A148"
+        android:text="-"
+        android:textSize="34sp"
+        app:cornerRadius="60dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/buttonMulti"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Multiplicación" />
+    <Button
+        android:id="@+id/buttonDivision"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginEnd="96dp"
+        android:layout_marginBottom="348dp"
+        android:backgroundTint="#23A148"
+        android:text="/"
+        android:textSize="34sp"
+        app:cornerRadius="60dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-        <Button
-            android:id="@+id/buttonDivision"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="División" />
-    </LinearLayout>
+    <Button
+        android:id="@+id/buttonRad"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="165dp"
+        android:layout_marginBottom="150dp"
+        android:backgroundTint="#23A148"
+        android:text="rad"
+        android:textSize="20sp"
+        app:cornerRadius="60dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
